welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:15: error: type mismatch;
 found   : Unit
 required: Boolean
			if (estFaceMur) { true }  }
                        ^SnakeBuggle:14: error: type mismatch;
 found   : Unit
 required: Boolean
		if (estFaceMur) { gauche()
                ^