welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
	baisseBrosse()
	while (!positionfinale) { mur() }

	def mur() = { 
		while (!estFaceMur) {avance() }
		while (estFaceMur) {
			if (getDirection() == Direction.EST) { gauche(); avance(); gauche() }
			if (getDirection() == Direction.OUEST) { droite(); avance(); droite() }
		}	
		}
	def positionfinale():Boolean = { 
		if (estFaceMur) { gauche()
			if (estFaceMur) { true }  }
	}
}